# arya_backend

./: .gitignore  Procfile  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
arya_backend/: dependencies.py  main.py  requirements.txt
arya_backend/.deta/: prog_info  state
arya_backend/auth/: __init__.py
arya_backend/config/: __init__.py
arya_backend/db/: QA.py  __init__.py  upload_QA.py  user.py
arya_backend/db/user/: user.py
arya_backend/models/: __init__.py  auth.py  qa.py  upload_QA.py
arya_backend/parser/: __init__.py
arya_backend/routers/: auth.py  qa.py  upload.py  user.py
parser/: __main__.py
parser/models/: __init__.py
parser/parsers/: locators.py  model.py  parser.py
tests/: conftest.py  test_arya_backend.py
tests/db/: test_qa.py  test_user.py
tests/models/: test_qa_model.py
tests/routers/user/: test_auth.py
