[tool.poetry]
name = "arya-backend"
version = "0.1.0"
description = ""
authors = ["rychanya <rychanya@gmail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.64.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b0"
isort = "^5.8.0"
nox = "^2020.12.31"
flake8 = "^3.9.2"
deta = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
